--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,11 @@
-body {
-  background-color: white;
+.divcenter {
+  margin: auto;
+  width: 50%;
+  padding: 10px;
 }
-h1 {
-  color: black;
-}
-p {
-  color: red;
+
+.button {
+  margin: auto;
+  width: 50%;
+  height: 50%;
 }
