--- a/styles.css
+++ b/styles.css
@@ -2,10 +2,5 @@
   margin: auto;
   width: 50%;
   padding: 10px;
-}
-
-.button {
-  margin: auto;
-  width: 50%;
-  height: 50%;
+  align-content: center;
 }
